k8s/networkpolicy/api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gateway-policy
  namespace: helpdeskflow
  labels:
    app.kubernetes.io/part-of: helpdeskflow
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: api-gateway
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: auth-service
      ports:
        - protocol: TCP
          port: 4001
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: user-service
      ports:
        - protocol: TCP
          port: 4002
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ticket-service
      ports:
        - protocol: TCP
          port: 4003
