k8s/networkpolicy/auth-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-service-policy
  namespace: helpdeskflow
  labels:
    app.kubernetes.io/part-of: helpdeskflow
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: auth-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: api-gateway
      ports:
        - protocol: TCP
          port: 4001
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: helpdeskflow-db
      ports:
        - protocol: TCP
          port: 5432
