k8s/networkpolicy/db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
  namespace: helpdeskflow
  labels:
    app.kubernetes.io/part-of: helpdeskflow
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: helpdeskflow-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: auth-service
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: user-service
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ticket-service
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: notification-service
      ports:
        - protocol: TCP
          port: 5432
