k8s/networkpolicy/notification-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notification-service-policy
  namespace: helpdeskflow
  labels:
    app.kubernetes.io/part-of: helpdeskflow
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: notification-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ticket-service
      ports:
        - protocol: TCP
          port: 4004
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: helpdeskflow-db
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mailpit
      ports:
        - protocol: TCP
          port: 1025
